--- a/front/package.json
+++ b/front/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "i18next": "^23.11.3",
     "next": "14.1.4",
+    "next-i18next": "^15.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^14.1.1",
     "zod": "^3.23.5"
   },
   "devDependencies": {
